--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ require(kableExtra)
 require(tidyverse)
 options(kableExtra.latex.load_packages = FALSE)
 options(knitr.table.format = "html")
-knitr::opts_chunk$set(dev = 'svg') # set output device to svg
+knitr::opts_chunk$set(dev = 'svg',fig.retina = 3, warning = FALSE, message = FALSE) # set output device to svg
 ```
 
 class: center, middle
@@ -195,6 +195,8 @@ Install the complete tidyverse with:
 install.packages("tidyverse")
 ```
 
+Look at the cheatsheets: https://www.rstudio.com/resources/cheatsheets/
+
 ]
 
 ---
@@ -216,6 +218,14 @@ require(tidyverse)
 ✖ dplyr::filter() masks stats::filter()
 ✖ dplyr::lag()    masks stats::lag()
 ```
+
+```{r,echo=F}
+data_progression %>% dplyr::select(Parts,Tools) %>%
+  mutate_all(function(x){str_replace(x,"<br>"," ")}) %>% 
+  kable() 
+```
+
+
 
 ---
 
@@ -274,8 +284,6 @@ kable(treatments.2,caption = "The same data but structured differently") %>%
 
 boxplot(treatments.2)
 ```
-
-
 
 
 
@@ -455,18 +463,85 @@ rnorm(n = 1000,mean = 5,sd=1) %>%
 ```
 
 
+
+---
+## Prepare `iris` dataset for `ggplot2`
+
+###iris dataset
+> The famous (Fisher’s or Anderson’s) iris data set gives the measurements in centimeters of the variables sepal length and width and petal length and width, respectively, for 50 flowers from each of 3 species of iris. The species are Iris setosa, versicolor, and virginica. (from ?iris)
+
+
+```{r,results='asis',echo=F}
+
+iris %>% head() %>% kable(caption="iris dataset") %>%
+  kable_styling(bootstrap_options = c("striped", "hover"))
+
+```
+
+
 ---
 
-## Data manipulation with `dplyr` and `%>%`
+class: 
 
+.left-column[
+## `r icons::fontawesome("laptop-code", style = "solid")` Your turn
+] 
+.right-column[
+
+1. Load the iris dataset from the `iris.tsv` file
+2. Add a new column called "Individual", numbering each individual by a number.
+3. Manipulate the table to lengthens data, increasing the number of rows and decreasing the number of columns.
+4. Separate the Feature column into two new columns: "Part" and "Metric".
+
+
+
+]
+
+.pull-left[
+> Need some help ?
+> The package needed for that are: `readr`, `dplyr` and `tidyr`.
+> Try to look at the cheatsheets: https://www.rstudio.com/resources/cheatsheets/. 
+
+
+]
+.pull-right[
+
+```{r ggplot18,echo=F, fig.height=3, fig.width=3, message=FALSE, warning=FALSE,dev.args = list(bg = "transparent"),fig.align="center",dpi=150,fig.retina=3}
+minutes <- data_frame(y = 0:60,x=1)
+
+hours <- filter(minutes, y %% 5 == 0)
+
+
+my.time <- 5
+my.time.str <- glue::glue("{my.time} minutes")
+
+p_timer <- ggplot(minutes,aes(x = x, y = y)) +
+  geom_bar(data=filter(minutes,y==my.time),stat="identity", width=1, col="black",fill="#e74c3c") +
+  geom_point(data = minutes,aes(x=1.5)) +
+  geom_point(data = hours, aes(x = 1.5, y = y,col=y),
+             size = 5, show.legend = FALSE) +
+  geom_text(aes(y = 30, x = 0.5, label = my.time.str), vjust = 1, size = 8,col="#e74c3c") +
+  coord_polar("y", start=0) +
+  scale_color_viridis_c() +
+  theme_void() + 
+  theme(legend.position="none",panel.background = element_rect(fill = "transparent", colour = NA),  plot.background = element_rect(fill = "transparent", colour = NA))
+print(p_timer)
+```
+
+
+]
+
+---
 ## Prepare `iris` dataset for `ggplot2`
 
 
+
 ```{r}
-iris.tbl <- iris %>%
-  as_tibble() %>% 
-  pivot_longer(-Species,names_to = "Type",values_to = "obs") %>%
-  separate(Type,into = c("Part","Metric"),se="\\.")
+iris.tbl <- readr::read_tsv("iris.tsv") %>%
+  tibble::as_tibble() %>% 
+  dplyr::mutate(Individual = 1:dplyr::n()) %>% 
+  tidyr::pivot_longer(-Species:-Individual,names_to = "Type",values_to = "obs") %>%
+  tidyr::separate(Type,into = c("Part","Metric"),se="\\.")
 ```
 
 ```{r,echo=F}
@@ -504,6 +579,35 @@ knitr::include_graphics("imgs/data-visualization_ggplot2.svg")
 
 ```{r,eval=F}
 ggplot(`data = iris.tbl`,
+       `aes(x=Part,y=obs)`) 
+```
+
+
+* __data__: `data = iris`.
+* __aesthetics__: `aes(x=Part,y=obs)`.
+
+]
+.pull-right[
+
+```{r,echo=F,width=4,height=4}
+ggplot(data = iris.tbl,aes(x=Part,y=obs)) 
+```
+
+
+
+]
+
+
+---
+
+### The three key components of every ggplot2
+
+.pull-left[
+
+
+
+```{r,eval=F}
+ggplot(`data = iris.tbl`,
        `aes(x=Part,y=obs)`) +
   `geom_boxplot()`
 ```
@@ -525,6 +629,37 @@ ggplot(data = iris.tbl,aes(x=Part,y=obs)) +
 
 ]
 
+
+---
+
+### The three key components of every ggplot2
+
+.pull-left[
+
+
+
+```{r,eval=F}
+ggplot(`data = iris.tbl`,
+       `aes(x=Part,y=obs,fill=Species)`) +
+  `geom_boxplot()`
+```
+
+
+* __data__: `data = iris`.
+* __aesthetics__: `aes(x=Part,y=obs,fill=Species)`.
+* __geoms__: `geom_boxplot()`.
+
+]
+.pull-right[
+
+```{r,echo=F,width=4,height=4}
+ggplot(data = iris.tbl,aes(x=Part,y=obs,fill=Species)) +
+  geom_boxplot()
+```
+
+
+
+]
 
 
 ---
@@ -611,12 +746,13 @@ ggplot(data = iris.tbl,aes(x=Part,y=obs,color=Species)) +
 
 
 ```{r,eval=F}
-ggplot(`data = iris.tbl`,
+p <- ggplot(`data = iris.tbl`,
        `aes(x=Part,y=obs,color=Species)`) +
-  `geom_boxplot(width=0.15,outlier.shape=NA)` +
-  `geom_violin(alpha=0.2)` +
-  `geom_jitter(width=0.15)`+
-  facet_wrap(Part~Metric,scales="free_y") +
+  facet_wrap(Part~Metric,scales="free_y")
+
+p <- p +  `geom_boxplot(width=0.15,outlier.shape=NA)`
+p <- p +  `geom_violin(alpha=0.2)`
+p <- p +  `geom_jitter(width=0.15)`
 ```
 
 
@@ -633,11 +769,163 @@ knitr::include_graphics("imgs/ggdisplay.gif")
 
 ]
 
+---
+
+### Uses of aesthetics within `aes`
+
+
+.pull-left[
+
+#### aesthetics can be hardcoded
+
+
+```{r,eval=F}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs)) +
+    geom_boxplot(aes(`fill = "grey40"`,
+                     `col = "steelblue"`)) +
+  geom_jitter(`alpha=0.4`)
+```
+
+```{r,echo=F,fig.height=3,fig.width=4}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs)) +
+    geom_boxplot(fill = "grey40",col = "steelblue") +
+  geom_jitter(alpha=0.4)
+```
+
+]
+
+--
+
+.pull-right[
+
+#### Or included within `aes`
+
+```{r,eval=F}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs,`col=Species`,`shape=Metric`)) +
+    geom_boxplot() +
+  geom_jitter(alpha=0.4)
+```
+
+```{r,echo=F,fig.height=3,fig.width=4}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs,col=Species,shape=Metric)) +
+    geom_boxplot(outlier.shape = NA) +
+  geom_jitter(alpha=0.4) 
+```
+
+
+
+]
+
+
+
+
+---
+### Uses of aesthetics within `aes`
+
+
+```{r,eval=F}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs,`col=Species`,`shape=Metric`)) +
+    geom_boxplot() +
+  geom_jitter(alpha=0.4)
+```
+
+```{r,echo=F,fig.height=4,fig.width=8,fig.align='center'}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs,col=Species,shape=Metric)) +
+    geom_boxplot(outlier.shape = NA) +
+  geom_jitter(alpha=0.4) + theme(legend.position ="bottom")
+```
+
+--
+
+`aes()` can be called within `ggplot` function or within each `geom_*`.
+
+---
+### Uses of aesthetics within `aes`
+
+
+```{r,eval=F}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs)) +
+    geom_boxplot() +
+  geom_jitter(aes(`col=Species`,`shape=Metric`),alpha=0.4)
+```
+
+```{r,echo=F,fig.height=4,fig.width=8,fig.align='center'}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs)) +
+    geom_boxplot(outlier.shape = NA) +
+  geom_jitter(aes(col=Species,shape=Metric),alpha=0.4) + theme(legend.position ="bottom")
+```
+
+
+---
+### Uses of aesthetics within `aes`
+
+
+```{r,eval=F}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs)) +
+    geom_boxplot() +
+  geom_jitter(aes(`col=Species`,`shape=Metric`),alpha=0.4) +
+  `facet_wrap(~Metric)`
+```
+
+```{r,echo=F,fig.height=3.5,fig.width=8,fig.align='center'}
+ggplot(data = iris.tbl,
+       aes(x=Part,y=obs)) +
+    geom_boxplot(outlier.shape = NA) +
+  geom_jitter(aes(col=Species,shape=Metric),alpha=0.4) + theme(legend.position ="bottom") +
+  facet_wrap(~Metric)
+```
+
+Strength of `ggplot2`: Combining various aesthetics allow to display __multiples variable in one plot easily.__
+
+
 
 ---
 
+### Graphical options
 
-```{r ggplot11,echo=F, fig.height=12, fig.width=22, message=FALSE, warning=FALSE}
+```{r ggplot13,echo=TRUE, fig.height=5, fig.width=14, message=FALSE, warning=FALSE}
+p <- iris.tbl  %>% 
+  ggplot(aes(x=Species,y=obs,color=Species,fill = after_scale(colorspace::lighten(color, .5)))) +
+  geom_boxplot(width=0.15,outlier.shape=NA) +
+  geom_violin(alpha=0.2) +
+  geom_jitter(width=0.15)+
+  facet_wrap(Part~Metric,scales="free_y",nrow=1) +
+    scale_color_brewer(palette="Set1") #A new palette
+print(p)
+```
+
+
+---
+
+```{r ggplot14,echo=F, fig.height=8, fig.width=14, message=FALSE, warning=FALSE}
+require(patchwork)
+p <- iris.tbl  %>% 
+  ggplot(aes(x=Species,y=obs,color=Species,fill = after_scale(colorspace::lighten(color, .5)))) +
+  geom_boxplot(width=0.15,outlier.shape=NA) +
+  geom_violin(alpha=0.2) +
+  geom_jitter(width=0.15)+
+  facet_wrap(Part~Metric,scales="free_y",nrow=1) + theme(legend.position = "right")
+p11 <- p + scale_color_brewer(palette="Set1") + ggtitle("scale_color_brewer(palette='Set1')")
+p12 <- p + scale_color_viridis_d() + ggtitle("scale_color_viridis_d()")
+p13 <- p + scale_color_manual(values = c('red','blue','green')) + ggtitle("scale_color_manual(values = c('red','blue','green'))")
+p11/p12/p13
+```
+
+
+---
+
+### Various `geom_*` for various aesthetic.
+
+```{r ggplot11,echo=F, fig.height=10, fig.width=22, message=FALSE, warning=FALSE}
 
 p1 <- iris %>%# Data
     ggplot(aes(x=Species,y=Petal.Length)) +# aesthetics
@@ -661,4 +949,118 @@ cowplot::plot_grid(p1,p5,p6,p2,p3,p4)
 ```
 
 
+---
 
+
+##Themes
+
+```{r ggplot15,echo=F, fig.height=10, fig.width=22, message=FALSE, warning=FALSE}
+p <- iris %>%# Data
+    ggplot(aes(x=Petal.Width,y=Petal.Length)) +# aesthetics
+    geom_point(aes(col=Species,size = Sepal.Length))#A new palette
+p1 <- p + theme_grey(base_size = 22) + ggtitle("theme_grey") + theme(legend.position = "none") 
+
+p2 <- p + theme_gray(base_size = 22)+ ggtitle("theme_gray") + theme(legend.position = "none") 
+
+p3 <- p + theme_bw(base_size = 22)+ ggtitle("theme_bw") + theme(legend.position = "none") 
+
+p4 <- p + theme_linedraw(base_size = 22)+ ggtitle("theme_linedraw") + theme(legend.position = "none") 
+
+p5 <- p + theme_light(base_size = 22)+ ggtitle("theme_light") + theme(legend.position = "none") 
+
+p6 <- p + theme_dark(base_size = 22)+ ggtitle("theme_dark") + theme(legend.position = "none") 
+
+p7 <- p + theme_minimal(base_size = 22)+ ggtitle("theme_minimal") + theme(legend.position = "none") 
+
+p8 <- p + theme_classic(base_size = 22)+ ggtitle("theme_classic") + theme(legend.position = "none") 
+
+p9 <- p + theme_void(base_size = 22)+ ggtitle("theme_void") + theme(legend.position = "none") 
+
+p10 <- p + theme_test(base_size = 22)+ ggtitle("theme_test") + theme(legend.position = "none") 
+
+cowplot::plot_grid(p1,p2,p3,p4,p5,p6,p7,p8,p9,p10)
+
+```
+
+---
+
+##Themes
+
+```{r ggplot16,echo=F, fig.height=10, fig.width=22, message=FALSE, warning=FALSE}
+p <- iris %>%
+    gather(key = "Type",value = "obs",-Species) %>% separate(Type,into = c("Type_1","Type_2"),se="\\.") %>% ggplot(aes(x=Species,y = obs,fill=Species)) + geom_boxplot(width=0.5) + facet_grid(Type_2~Type_1,scales = "free")
+p1 <- p + theme_grey(base_size = 22) + ggtitle("theme_grey") + theme(legend.position = "none") 
+
+p2 <- p + theme_gray(base_size = 22)+ ggtitle("theme_gray") + theme(legend.position = "none") 
+
+p3 <- p + theme_bw(base_size = 22)+ ggtitle("theme_bw") + theme(legend.position = "none") 
+
+p4 <- p + theme_linedraw(base_size = 22)+ ggtitle("theme_linedraw") + theme(legend.position = "none") 
+
+p5 <- p + theme_light(base_size = 22)+ ggtitle("theme_light") + theme(legend.position = "none") 
+
+p6 <- p + theme_dark(base_size = 22)+ ggtitle("theme_dark") + theme(legend.position = "none") 
+
+p7 <- p + theme_minimal(base_size = 22)+ ggtitle("theme_minimal") + theme(legend.position = "none") 
+
+p8 <- p + theme_classic(base_size = 22)+ ggtitle("theme_classic") + theme(legend.position = "none") 
+
+p9 <- p + theme_void(base_size = 22)+ ggtitle("theme_void") + theme(legend.position = "none") 
+
+p10 <- p + theme_test(base_size = 22)+ ggtitle("theme_test") + theme(legend.position = "none") 
+
+cowplot::plot_grid(p1,p2,p3,p4,p5,p6,p7,p8,p9,p10)
+
+```
+
+
+---
+
+## A custom Theme
+
+```{r ggplot17,echo=F, fig.height=10, fig.width=22, message=FALSE, warning=FALSE}
+p <- iris %>%
+    gather(key = "Type",value = "obs",-Species) %>% separate(Type,into = c("Type_1","Type_2"),se="\\.") %>% ggplot(aes(x=Species,y = obs,fill=Species)) + geom_boxplot(width=0.5) + facet_grid(Type_2~Type_1,scales = "free") + ggtitle("Iris dataset")
+
+p1 <-iris %>%
+    gather(key = "Type",value = "obs",-Species) %>% separate(Type,into = c("Type_1","Type_2"),se="\\.") %>% ggplot(aes(x=Species,y = obs,fill=Species)) + geom_boxplot(width=0.5,col="#dfe6e9") + facet_grid(Type_2~Type_1,scales = "free") + ggtitle("Iris dataset") + theme_minimal(base_size=18) + theme(text = element_text(family="Helvetica",face="bold"),legend.key = element_rect(fill = "#f1f2f6", colour = "#3c6382",linetype="dotted"), 
+
+plot.title = element_text(size = rel(1.5),colour = "#2f3542",hjust = 0.5), 
+strip.background = element_rect(fill = "#636e72", colour = "#2d3436"), 
+panel.background = element_rect(fill = "#2d3436", colour = "#2d3436"), 
+strip.text = element_text(colour = "#dfe6e9"),
+panel.border = element_blank(), 
+panel.grid.major = element_line(colour = "#f5f6fa",linetype = "dashed",size = 0.3), 
+panel.grid.minor = element_line(colour = "#f5f6fa", size = 0.25,linetype = "dotted"),
+legend.position = "bottom",legend.key.size =  unit(0.3, "in"),legend.text = element_text(size=rel(1.2)),legend.title = element_text(size=rel(1.2))) + ggsci::scale_fill_tron() 
+
+cowplot::plot_grid(p,p1)
+
+```
+
+
+---
+
+## Get, set, and modify the active theme with `theme_set()` and `theme_update()`
+
+.pull-left[
+
+```{r theme_display,fig.height=3,fig.width=4}
+p
+```
+
+]
+.pull-right[
+```{r theme_display2,fig.height=3,fig.width=4}
+theme_set(theme_minimal(base_size=6))
+theme_update(
+  strip.background = element_rect(fill = "#636e72", colour = "#2d3436"), 
+  panel.background = element_rect(fill = "#2d3436", colour = "#2d3436"), 
+  strip.text = element_text(colour = "#dfe6e9")
+)
+p
+```
+]
+
+
+---
